8073957: assert(ary_src != 0) failed: not an array or instance?

ArrayCopyNode going dead needs better validation of inputs

Reviewed-by: kvn, vlivanov